--- a/index.html
+++ b/index.html
@@ -40,9 +40,20 @@
               <h3>PLAYLIST</h3>
             </div>
             <div>
-              <img src="img/search.svg" width="30px" alt="logo">
-              <p>Create Playlist</p>
+              <img src="img/plus.png" width="30px" alt="logo">
+              <p class="playbutton">Create Playlist</p>
             </div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
+            <div class="playlist">Playlist Name</div>
             <div class="playlist">Playlist Name</div>
             <div class="playlist">Playlist Name</div>
             <div class="playlist">Playlist Name</div>
@@ -137,8 +148,8 @@
             <p class="songName">Song Name</p>
           </div>
           <div class="hearts">
-            <img src="images-bravin/heart.svg" width="20px" class="heart">
-            <img src="images-bravin/pause.svg" width="20px" class="heart">
+            <img src="img/heart.png" height="20px" class="heart">
+            <img src="img/pause.png" height="20px" class="heart">
           </div>
         </div>
         <div class="center">
@@ -149,9 +160,9 @@
           <img src="img/repeat-button.png" width="20px">
         </div>
         <div class="right-bar">
-          <img src="images-bravin/volume.svg" width="20px">
-          <img src="images-bravin/search.svg" width="20px">
-          <img src="images-bravin/queue.svg" width="20px">
+          <img src="img/list.png" width="20px">
+          <img src="img/search.png" width="20px">
+          <img src="img/volume-up-interface-symbol.png" height="20px">
         </div>
       </footer>
   </body>
