album hover effects w/o play

--- a/index.html
+++ b/index.html
@@ -83,32 +83,32 @@
           </ul>
           <h2>Recently played</h2>
           <div class="top-row">
-            <div>
+            <div class="album-pic">
               <img src="img/metal_lifting.jpg" width="250px" alt="album-cover">
               <h4>Heavy Metal</h4>
               <p>Subtitle</p>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/stranger.jpeg" width="250px" alt="album-cover">
               <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack</h4>
               <p>Subtitle</p>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/aquietplace.jpeg" width="250px" alt="album-cover">
               <h4>A Quiet Place</h4>
               <p>Subtitle</p>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/split.jpeg" width="250px" alt="album-cover">
               <h4>Split</h4>
               <p>Subtitle</p>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/cure.jpeg" width="250px" alt="album-cover">
               <h4>A Cure for Wellness</h4>
               <p>Subtitle</p>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/sinister.jpeg" width="250px" alt="album-cover">
               <h4>Sinister</h4>
               <p>Subtitle</p>
@@ -117,11 +117,11 @@
           <h2>Created for John Doe</h2>
           <p>The more you listen, the more accurate the suggestions.</p>
           <div class="second-row">
-            <div>
+            <div class="album-pic">
               <img src="img/radar.jpeg" width="250px" alt="album-cover">
               <h4>Release Radar</h4>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/mixdaily.jpeg" width="250px" alt="album-cover">
               <h4>Daily Mix 1</h4>
             </div>
@@ -129,11 +129,11 @@
           <h2>Most popular artists</h2>
           <p>The more you listen, the more accurate the suggestions.</p>
           <div class="third-row">
-            <div>
+            <div class="album-pic">
               <img src="img/youg.jpeg" width="250px" alt="album-cover">
               <h4>Young and Beautiful</h4>
             </div>
-            <div>
+            <div class="album-pic">
               <img src="img/einaudi.jpeg" width="250px" alt="album-cover">
               <h4>Einaudi</h4>
             </div>
