play hovers added

--- a/index.html
+++ b/index.html
@@ -85,31 +85,49 @@
           <div class="top-row">
             <div class="album-pic">
               <img src="img/metal_lifting.jpg" width="250px" alt="album-cover">
+              <div class="middle">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Heavy Metal</h4>
               <p>Subtitle</p>
             </div>
             <div class="album-pic">
               <img src="img/stranger.jpeg" width="250px" alt="album-cover">
+              <div class="middle">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack</h4>
               <p>Subtitle</p>
             </div>
             <div class="album-pic">
               <img src="img/aquietplace.jpeg" width="250px" alt="album-cover">
+              <div class="middle">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>A Quiet Place</h4>
               <p>Subtitle</p>
             </div>
             <div class="album-pic">
               <img src="img/split.jpeg" width="250px" alt="album-cover">
+              <div class="middle">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Split</h4>
               <p>Subtitle</p>
             </div>
             <div class="album-pic">
               <img src="img/cure.jpeg" width="250px" alt="album-cover">
+              <div class="middle">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>A Cure for Wellness</h4>
               <p>Subtitle</p>
             </div>
             <div class="album-pic">
               <img src="img/sinister.jpeg" width="250px" alt="album-cover">
+              <div class="middle">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Sinister</h4>
               <p>Subtitle</p>
             </div>
@@ -119,10 +137,16 @@
           <div class="second-row">
             <div class="album-pic">
               <img src="img/radar.jpeg" width="250px" alt="album-cover">
+              <div class="middle2">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Release Radar</h4>
             </div>
             <div class="album-pic">
               <img src="img/mixdaily.jpeg" width="250px" alt="album-cover">
+              <div class="middle2">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Daily Mix 1</h4>
             </div>
           </div>
@@ -131,10 +155,16 @@
           <div class="third-row">
             <div class="album-pic">
               <img src="img/youg.jpeg" width="250px" alt="album-cover">
+              <div class="middle3">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Young and Beautiful</h4>
             </div>
             <div class="album-pic">
               <img src="img/einaudi.jpeg" width="250px" alt="album-cover">
+              <div class="middle3">
+                <img src="img/play-button.png" width="30px">
+              </div>
               <h4>Einaudi</h4>
             </div>
           </div>
